--- a/collatz_calculus.tex
+++ b/collatz_calculus.tex
@@ -67,7 +67,8 @@ Finally, we analyze the probabilistic dynamics of the underlying Markov chain, c
 \noindent \textbf{Keywords:} Collatz Conjecture; Finite State Automata; Symbolic Dynamics; 2-adic Integers; Inverse Dynamics.
 
 \medskip
-\noindent \textbf{Word Count:} Approx. 4,100
+%word count commandline: texcount -total collatz_calculus_v15.tex
+%\noindent \textbf{Word Count:} Approx. 4,100
 \newpage
 
 \newpage
