--- a/collatz_calculus.tex
+++ b/collatz_calculus.tex
@@ -1010,7 +1010,8 @@ By substituting the preimage relation $x_{i-1} = \frac{2^{s_i}x_i - 1}{3}$, the 
 
 This \textbf{Magnitude Consumption Identity} $\sum 2d = x-1$ provides the conservative arithmetic basis for the conjecture. It confirms that the orbit is not a random walk, but a deterministic exhaustion of the initial 2-adic potential.
 
-\subsubsection{Universal Scaling of the $4n+1$ Recurrence}
+\subsubsection{Empirical Scaling of the $4n+1$ Recurrence}
+%\subsubsection{Universal Scaling of the $4n+1$ Recurrence}
 Finally, this master formula explains the $4n+1$ recurrence identified in our preimage arrays. Because $d$ scales linearly with $x$, any 2nd-order shift in the exponent ($s \to s+2$) results in a geometrically scaled drift:
 
 \begin{equation}
@@ -1042,6 +1043,7 @@ Canceling the intermediate terms, we arrive at the \textbf{Magnitude Consumption
 
 This identity proves that the total displacement $d$ required to reach the ground state is an invariant property of the initial magnitude $x$.
 
+%\subsubsection{Algebraic Foundation of the $4n+1$ Index Gear}
 \subsubsection{The Universal Scaling Law of the $4n+1$ Recurrence}
 
 The recurrence $j_{n+1} = 4j_n + 1$ observed in the Preimage Arrays (Section 2.4) is the analytical "gear ratio" of the 2-adic space. By increasing the 2nd-order 2-adic exponent $s$ by 2 (moving one column in the dataset), the magnitude displacement $\Delta$ scales according to:
@@ -1076,7 +1078,8 @@ This ratio provides three critical insights into the system's dynamics:
     \item \textbf{Vanishing Noise:} The "noise" traditionally associated with the $+1$ in $3x+1$ is strictly confined to the $1/3x$ term. Since this term is inversely proportional to $x$, the deterministic 2-adic scaling laws become "cleaner" the further the orbit is from the ground state at 1.
 \end{enumerate}
 
-\subsubsection{Universal Scaling of the $4n+1$ Recurrence}
+\subsubsection{Universal Differential Scaling Law}
+%\subsubsection{Universal Scaling of the $4n+1$ Recurrence}
 
 The recurrence $j_{n+1} = 4j_n + 1$ observed in the Preimage Arrays (Section 2.4) is the analytical "gear ratio" of the 2nd-order 2-adic manifold. The following lemma establishes the fundamental scaling mechanism behind this result:
 
