--- a/collatz_calculus.tex
+++ b/collatz_calculus.tex
@@ -2962,7 +2962,7 @@ python reverse_construct.py --mode chain --y 497 --stop 1 --csv chain_497_to_1.c
 
 \paragraph{Archival guarantee.}
 A reference implementation of the unified inverse table, the word evaluator, and the example generators as well as all the Rocq/Coq 9.1.0 formlization files is archived at
-\href{https://doi.org/ DOI: 10.5281/zenodo.17993692}{Zenodo DOI: DOI: 10.5281/zenodo.17993692} and mirrored at
+\href{https://doi.org/  DOI: 10.5281/zenodo.18382164//zenodo.18382164}{Zenodo  DOI: 10.5281/zenodo.18382164//zenodo.18382164} and mirrored at
 \href{git@github.com:kisira/collatz.git}{github.com/kisira/collatz}.
 
 \section*{Appendix K: Formalization Index}
